fix(frontend): Better solution-table z-index

--- a/frontend/src/app/assignment/modules/assignment/solution-table/solution-table.component.scss
+++ b/frontend/src/app/assignment/modules/assignment/solution-table/solution-table.component.scss
@@ -5,5 +5,5 @@
 
 .sticky-top {
   top: 3.5rem;
-  z-index: var(--bs-dropdown-zindex);
+  z-index: 990;
 }
